--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "my-app",
   "version": "1.0.0",
@@ -8,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
