--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "my-app",
+  "name": "telegram-fetcher",
   "version": "1.0.0",
-  "description": "A simple Node.js app",
+  "description": "Fetch messages from a Telegram group",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "telegram": "^1.6.1",
+    "readline": "^1.3.0",
+    "fs": "^0.0.1-security"
   }
 }
